[project]
name = "personal-toolkit"
version = "0.1.0"
description = "Personal Toolkit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.1.0",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.49",
]
